--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,5 @@
 exportPattern("^[[:alpha:]]+")
 importFrom("stats", "runif")
+importFrom("stats", "quantile")
+importFrom("utils", "txtProgressBar")
 useDynLib("bayesianrvfl")
