--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: bayesianrvfl
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Bayesian Quasi-Randomized nnetworks
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: GPL
+Date: 2023-12-04
+Author: T. Moudiki
+Maintainer: T. Moudiki <thierry.moudiki@gmail.com>
+Description: Bayesian Quasi-Randomized nnetworks.
+License: BSD_3_clause Clear + file LICENSE
 Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp
