--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,4 +7,4 @@ importFrom("stats", "Box.test", "cor", "dnorm", "dunif", "nlminb",
              "pnorm", "shapiro.test", "t.test", "var")
 importFrom("utils", "setTxtProgressBar", "tail")
 import("foreach")
-useDynLib("bayesianrvfl")
+#useDynLib("bayesianrvfl")
