--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,4 +10,5 @@ License: BSD_3_clause Clear + file LICENSE
 Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp
-Imports: Rcpp, randtoolbox, foreach
+Imports: Rcpp, foreach
+Depends: cclust, MASS, randtoolbox
