--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: bayesianrvfl
 Type: Package
 Title: Bayesian Quasi-Randomized nnetworks
-Version: 0.3.1
-Date: 2024-08-27
+Version: 0.3.2
+Date: 2025-04-25
 Author: T. Moudiki
 Maintainer: T. Moudiki <thierry.moudiki@gmail.com>
 Description: Bayesian Quasi-Randomized nnetworks.
@@ -11,5 +11,5 @@ Encoding: UTF-8
 LazyData: true
 LinkingTo: Rcpp
 Imports: Rcpp, randtoolbox, foreach, memoise
-Depends: cclust, memoise 
+Depends: cclust, memoise, mlbench, caret   
 RoxygenNote: 7.3.2
